5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1679_1880.log
== TEST (2019-04-19 20:49:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == 1):
	print(janeiro)
elif (m == 2):
	print(fevereiro)
elif (m == 3):
	print(marco)
elif (m == 4):
	print(abril)
elif (m == 5):
	print(maio)
elif (m == 6):
	print(junho)
elif (m == 7):	
-- ERROR:
File "XXXX", line 18
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:55:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
else:
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:56:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
else:
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:56:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:56:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:57:52) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:58:00) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- EXECUTION TIME:
0.20056
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:58:07) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:59:30) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:59:37) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- EXECUTION TIME:
0.118414
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:05:55) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 21:06:18) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
	
	
	
	
	
	
-- EXECUTION TIME:
0.134157
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:09:37) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")
-- OUTPUT:
dezembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:09:55) 
-- CODE:
print(bug)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(bug)
NameError: name 'bug' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:10:19) 
-- CODE:
print(778)
-- OUTPUT:
778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 21:10:56) 
-- CODE:
print(778)
-- EXECUTION TIME:
0.184824
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
778
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
778
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 00:26:16) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")

-- OUTPUT:
778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:10:00) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")

-- OUTPUT:
778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:10:21) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")

-- EXECUTION TIME:
0.17067
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:10:25) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == "1"):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")

-- OUTPUT:
778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:11:19) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == 1):
	print("janeiro")
elif (m == "2"):
	print("fevereiro")
elif (m == "3"):
	print("marco")
elif (m == "4"):
	print("abril")
elif (m == "5"):
	print("maio")
elif (m == "6"):
	print("junho")
elif (m == "7"):	
	print("julho")
elif (m == "8"):
	print("agosto")
elif (m == "9"):
	print("setembro")
elif (m == "10"):
	print("outubro")
elif (m == "11"):
	print("novembro")
elif (m == "12"):
	print("dezembro")

-- OUTPUT:
778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:12:40) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):	
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif (m == 11):
	print("novembro")
elif (m == 12):
	print("dezembro")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:12:51) 
-- CODE:
m = int(input("Mes: "))
if (m < 1 or m > 12):
	print("numero de mes invalido")
elif (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):	
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif (m == 11):
	print("novembro")
elif (m == 12):
	print("dezembro")

-- EXECUTION TIME:
0.243374
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
